--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -28,6 +28,9 @@ jobs:
           distribution: 'oracle'
           check-latest: true
           server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@v2023.3
         env:
