--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -20,6 +20,11 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}  # to check out the actual pull request commit, not the merge commit
           fetch-depth: 0  # a full history is required for pull request analysis
 
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+      - name: run
+        run: ./gradlew -q javaToolchains
+
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@v2023.3
         env:
