--- a/valentine-starter/src/main/resources/config/application-dev.yml
+++ b/valentine-starter/src/main/resources/config/application-dev.yml
@@ -70,6 +70,8 @@ spring:
           enabled: true #是否开启消费者重试（为false时关闭消费者重试，这时消费端代码异常会一直重复收到消息）
           max-attempts: 3 #最大重试次数
           initial-interval: 5000ms
+    publisher-confirm-type: correlated
+    publisher-returns: true
 
   ##### 邮箱配置（配合3rd-tools模块使用）
   mail:
