multi os version build test

--- a/.github/workflows/graalvm_macos.yml
+++ b/.github/workflows/graalvm_macos.yml
@@ -18,7 +18,10 @@ permissions:
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ macos-latest, macos-11.7 ]
 
     steps:
       - uses: actions/checkout@v4
