--- a/.github/workflows/update-gradle-wrapper.yml
+++ b/.github/workflows/update-gradle-wrapper.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   update:
-    runs-on: ${{ (matrix.language == 'swift' && matrix.os) || 'ubuntu-latest' }}
+    runs-on: ${{ matrix.os }}
     timeout-minutes: ${{ (matrix.language == 'swift' && 120) || 360 }}
     permissions:
       issues: write
