The `macos-11` label has been deprecated and will no longer be available after 28 June 2024.

--- a/.github/workflows/graalvm_macos.yml
+++ b/.github/workflows/graalvm_macos.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ macos-latest, macos-11 ]
+        os: [ macos-latest ]
 
     steps:
       - uses: actions/checkout@v4
