--- a/gradle.properties
+++ b/gradle.properties
@@ -13,4 +13,5 @@
 #    See the License for the specific language governing permissions and
 #    limitations under the License.
 #
-org.gradle.vfs.watch=false
+# remove as Gradle 8.9 is Release and this will be the default val in macOS 11
+#org.gradle.vfs.watch=false
