--- a/document/nginx/proxy.conf
+++ b/document/nginx/proxy.conf
@@ -16,8 +16,9 @@ server {
 	 	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection "upgrade";
-		}
+		proxy_set_header Host $host
 	}
+}
 
 # 配置后端服务
 upstream proxy_svr_api {
