--- a/unicorn-oauth2/unicorn-oauth2-gateway-client/src/main/resources/redisson.yaml
+++ b/unicorn-oauth2/unicorn-oauth2-gateway-client/src/main/resources/redisson.yaml
@@ -8,7 +8,7 @@ singleServerConfig:
   password: redis-psd
   subscriptionsPerConnection: 5
   clientName: null
-  address: redis://10.211.55.140:6379
+  address: redis://127.0.0.1:${CACHE_PORT:-6379}
   subscriptionConnectionMinimumIdleSize: 2
   subscriptionConnectionPoolSize: 16
   connectionMinimumIdleSize: 8
