--- a/unicorn-oauth2/unicorn-oauth2-resource-server-mvc/src/main/resources/application.yml
+++ b/unicorn-oauth2/unicorn-oauth2-resource-server-mvc/src/main/resources/application.yml
@@ -39,7 +39,7 @@ spring:
   #配置数据源
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://${DB_HOST:10.211.55.140}:${DB_PORT:3306}/${DB_NAME:unicorn}
+    url: jdbc:mysql://${DB_HOST:127.0.0.1}:${DB_PORT:3306}/${DB_NAME:unicorn}
     username: ${DB_USER:}
     password: ${DB_PWD:}
 
@@ -66,7 +66,7 @@ spring:
           password: redis-psd
           subscriptionsPerConnection: 5
           clientName: null
-          address: redis://10.211.55.140:6379
+          address: redis://127.0.0.1:${CACHE_PORT:6379}
           subscriptionConnectionMinimumIdleSize: 2
           subscriptionConnectionPoolSize: 16
           connectionMinimumIdleSize: 8
@@ -79,7 +79,7 @@ spring:
   ##### RabbitMQ ####
   rabbitmq:
     #    RabbitMQ集群，通过addresses配置，多个以逗号分隔(优先取addresses，然后再取host)
-    addresses: 10.211.55.140:5672
+    addresses: 127.0.0.1:${MQ_PORT:5672}
     virtual-host: /unicorn # rabbitmq的虚拟host
     username: admin # rabbitmq的用户名
     password: admin # rabbitmq的密码
