--- a/valentine-starter/src/main/resources/config/application-dev.yml
+++ b/valentine-starter/src/main/resources/config/application-dev.yml
@@ -2,7 +2,7 @@
 spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://${DB_HOST:10.211.55.140}:${DB_PORT:}/${DB_NAME:unicorn}
+    url: jdbc:mysql://${DB_HOST:127.0.0.1}:${DB_PORT:3306}/${DB_NAME:unicorn}
     username: ${DB_USER:}
     password: ${DB_PWD:}
 
@@ -44,7 +44,7 @@ spring:
           password: redis-psd
           subscriptionsPerConnection: 5
           clientName: null
-          address: redis://10.211.55.140:6379
+          address: redis://127.0.0.1:${CACHE_PORT:6379}
           subscriptionConnectionMinimumIdleSize: 2
           subscriptionConnectionPoolSize: 8
           connectionMinimumIdleSize: 4
@@ -57,7 +57,7 @@ spring:
   ##### RabbitMQ ####
   rabbitmq:
     #    RabbitMQ集群，通过addresses配置，多个以逗号分隔(优先取addresses，然后再取host)
-    addresses: 10.211.55.140:5672
+    addresses: 127.0.0.1:${MQ_PORT:5672}
     virtual-host: /unicorn # rabbitmq的虚拟host
     username: admin # rabbitmq的用户名
     password: admin # rabbitmq的密码
