--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,6 @@
 #    See the License for the specific language governing permissions and
 #    limitations under the License.
 #
+kotlin=2.1.20
+org.jetbrains.kotlin\:kotlin-reflect=2.1.20
+org.jetbrains.kotlin\:kotlin-stdlib=2.1.20
