--- a/unicorn-oauth2/unicorn-openai/src/main/resources/application.properties
+++ b/unicorn-oauth2/unicorn-openai/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=unicorn-openai
-spring.ai.openai.api-key=${API-KEY}
-spring.ai.openai.base-url=https://api.deepseek.com
-spring.ai.openai.chat.options.model=deepseek-chat
+spring.ai.deepseek.api-key=${API-KEY}
+spring.ai.deepseek.base-url=https://api.deepseek.com
+spring.ai.deepseek.chat.options.model=deepseek-chat
