--- a/unicorn-oauth2/unicorn-mybatis/src/main/resources/application.yml
+++ b/unicorn-oauth2/unicorn-mybatis/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 # DataSource Config
 spring:
   datasource:
+    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=MYSQL
     driver-class-name: org.h2.Driver
     username: root
     password: test
