logic delete with some restriction

--- a/unicorn-oauth2/unicorn-mybatis/src/main/resources/application.yml
+++ b/unicorn-oauth2/unicorn-mybatis/src/main/resources/application.yml
@@ -23,5 +23,8 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: auto # 主键自增
+      logic-delete-field: deleted # 全局逻辑删除字段名
+      logic-delete-value: 1 # 逻辑已删除值。可选，默认值为 1
+      logic-not-delete-value: 0 # 逻辑未删除值。可选，默认值为 0
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.demo.dao.entity # 实体类所在包
