--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Setup Java JDK
         uses: actions/setup-java@v5
         with:
-          java-version: 21
-          distribution: 'oracle'
+          java-version: 25
+          distribution: 'temurin'
           check-latest: true
           server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
           settings-path: ${{ github.workspace }} # location for the settings.xml file
