--- a/.github/workflows/graalvm_macos.yml
+++ b/.github/workflows/graalvm_macos.yml
@@ -28,13 +28,13 @@ jobs:
       #  https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#Installing-custom-Java-package-type
       - name: Download JDK
         run: |
-          download_url="https://download.oracle.com/graalvm/21/latest/graalvm-jdk-21_macos-x64_bin.tar.gz"
+          download_url="https://download.java.net/java/GA/jdk25/bd75d5f9689641da8e1daabeccb5528b/36/GPL/openjdk-25_macos-x64_bin.tar.gz"
           wget -O $RUNNER_TEMP/java_package.tar.gz $download_url
       - uses: actions/setup-java@v5
         with:
           distribution: 'jdkfile'
           jdkFile: ${{ runner.temp }}/java_package.tar.gz
-          java-version: '21'
+          java-version: '25'
           architecture: x64
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
