--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -11,6 +11,6 @@ jobs:
     steps:
     - uses: actions/first-interaction@v3
       with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: "Greetings for the day! Thanks for your issue, will feedback soon"
-        pr-message: "Greetings for the day! Thanks for your pr, will feedback soon"
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        issue_message: "Greetings for the day! Thanks for your issue, will feedback soon"
+        pr_message: "Greetings for the day! Thanks for your pr, will feedback soon"
