--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,7 @@ easyCaptcha = "1.6.2"
 hutool = "5.8.28"
 ip2region = "3.0.4"
 jjwt = "0.13.0"
-kotlin = "2.3.0-Beta2"
+kotlin = "2.3.0-RC"
 kotlinxCoroutines = "1.10.2"
 logstash = "8.1"
 mapstruct = "1.6.3"
@@ -22,7 +22,7 @@ mapstructSpring = "1.1.3"
 oshiCore = "6.4.2"
 poi = "5.4.0"
 redisson = "3.50.0"
-springBoot = "4.0.0-RC2"
+springBoot = "4.0.0"
 springCloudVersion = "2025.0.0"
 springdoc = "2.8.13"
 thumbnailator = "0.4.21"
