--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,7 @@ easyCaptcha = "1.6.2"
 hutool = "5.8.28"
 ip2region = "3.0.4"
 jjwt = "0.13.0"
-kotlin = "2.3.0-RC"
+kotlin = "2.3.0-RC2"
 kotlinxCoroutines = "1.10.2"
 logstash = "9.0"
 mapstruct = "1.6.3"
@@ -23,7 +23,7 @@ oshiCore = "6.4.2"
 poi = "5.4.0"
 redisson = "3.50.0"
 springBoot = "4.0.0"
-springCloudVersion = "2025.0.0"
+springCloudVersion = "2025.1.0"
 springdoc = "3.0.0"
 thumbnailator = "0.4.21"
 xerces = "2.12.2"
