--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,7 @@ easyCaptcha = "1.6.2"
 hutool = "5.8.28"
 ip2region = "3.0.4"
 jjwt = "0.13.0"
-kotlin = "2.3.0-RC3"
+kotlin = "2.3.0"
 kotlinxCoroutines = "1.10.2"
 logstash = "9.0"
 mapstruct = "1.6.3"
