--- a/unicorn-oauth2/unicorn-oauth2-gateway-client/src/main/resources/application.yml
+++ b/unicorn-oauth2/unicorn-oauth2-gateway-client/src/main/resources/application.yml
@@ -10,6 +10,8 @@ logging:
 #    org.springframework.boot.autoconfigure: DEBUG
 
 spring:
+  jackson:
+    use-jackson2-defaults: true
   thymeleaf:
     cache: false
   # use virtual threads in Spring Boot 3.2 + Java 21
