--- a/unicorn-oauth2/unicorn-oauth2-authorizationserver/src/main/resources/application.yml
+++ b/unicorn-oauth2/unicorn-oauth2-authorizationserver/src/main/resources/application.yml
@@ -26,9 +26,9 @@ spring:
   #配置数据源
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://${DB_HOST:10.211.55.140}:${DB_PORT:3306}/${DB_NAME:unicorn}
-    username: ${DB_USER:}
-    password: ${DB_PWD:}
+    url: jdbc:mysql://${DB_HOST:10.211.55.29}:${DB_PORT:3306}/${DB_NAME:unicorn}
+    username: ${DB_USER:root}
+    password: ${DB_PWD:root}
 
     hikari:
       # When the pool reaches this size, and no idle connections are available, calls to getConnection() will block for up to connectionTimeout milliseconds before timing out. Please read about pool sizing. Default: 10
@@ -42,6 +42,6 @@ spring:
   # redis配置
   data:
     redis:
-      url: redis://redis-psd@10.211.55.140:${CACHE_PORT:6379}
+      url: redis://redis-psd@10.211.55.29:${CACHE_PORT:6379}
       timeout: 2000
       database: 4
