--- a/unicorn-oauth2/unicorn-oauth2-gateway-client/src/main/resources/redisson.yaml
+++ b/unicorn-oauth2/unicorn-oauth2-gateway-client/src/main/resources/redisson.yaml
@@ -3,13 +3,14 @@ singleServerConfig:
   idleConnectionTimeout: 10000
   connectTimeout: 10000
   timeout: 3000
-  retryAttempts: 3
-  retryInterval: 1500
+  retryAttempts: 4
+  retryDelay: !<org.redisson.config.EqualJitterDelay> {baseDelay: PT1S, maxDelay: PT2S}
+  reconnectionDelay: !<org.redisson.config.EqualJitterDelay> {baseDelay: PT0.1S, maxDelay: PT10S}
   password: redis-psd
   subscriptionsPerConnection: 5
   clientName: null
-  address: redis://10.211.55.140:${CACHE_PORT:-6379}
-  subscriptionConnectionMinimumIdleSize: 2
+  address: "redis://10.211.55.29:${CACHE_PORT:-6379}"
+  subscriptionConnectionMinimumIdleSize: 1
   subscriptionConnectionPoolSize: 16
   connectionMinimumIdleSize: 8
   connectionPoolSize: 16
@@ -17,5 +18,5 @@ singleServerConfig:
   dnsMonitoringInterval: 5000
 threads: 4
 nettyThreads: 8
-codec: !<org.redisson.codec.Kryo5Codec> { }
+codec: !<org.redisson.codec.Kryo5Codec> {}
 transportMode: "NIO"
