--- a/unicorn-oauth2/unicorn-mybatis/src/main/resources/application.yml
+++ b/unicorn-oauth2/unicorn-mybatis/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 # DataSource Config
 spring:
   datasource:
@@ -28,3 +29,5 @@ mybatis-plus:
       logic-not-delete-value: 0 # 逻辑未删除值。可选，默认值为 0
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.demo.dao.entity # 实体类所在包
+server:
+  port: 8082
